--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <video autoplay loop id="video-bg">
-        <source src="background.mp4" type="video/mp4">
+        <source src="background3.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
