--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="Money calculator">
 
-        <h2>Nice Calculator</h2>
+        <h2>Money Calculator</h2>
 
         <input type="text" id="previousEntry" disabled>
         <input type="text" id="currentEntry" disabled>
