--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nice Calculator</title>
+    <title>Money Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
         Your browser does not support the video tag.
     </video>
 
-    <div id="calculator">
+    <div id="Money calculator">
 
-        <h2>Nice Calculator</h2>
+        <h2>Money Calculator</h2>
 
         <input type="text" id="previousEntry" disabled>
         <input type="text" id="currentEntry" disabled>
