--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         Your browser does not support the video tag.
     </video>
 
-    <div id="Money calculator">
+    <div id="Nice calculator">
 
-        <h2>Nice Calculator</h2>
+        <h2>Money Calculator</h2>
 
         <input type="text" id="previousEntry" disabled>
         <input type="text" id="currentEntry" disabled>
