--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Money Calculator</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <video autoplay loop id="video-bg">
-        <source src="background3.mp4" type="video/mp4">
+        <source src="background2.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
     <div id="calculator">
 
-        <h2>Money Calculator</h2>
+        <h2>Calculator</h2>
 
         <input type="text" id="previousEntry" disabled>
         <input type="text" id="currentEntry" disabled>
